[package]
name = "polyfs"
version = "0.1.0"
authors = ["Olivér Pirger <oliver@pirger.eu>"]
edition = "2024"
description = "Minimal, extensible, no_std, no_alloc FAT32 file system driver for SD cards."
repository = "https://github.com/4f48/sd-fat"
license = "GPL-3.0-or-later"
keywords = ["async", "fat32", "sdmmc"]
categories = ["filesystem", "hardware-support", "asynchronous"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.7.0"
heapless = "0.9.2"
trait-variant = "0.1.2"

[dev-dependencies]
fastrand = "2.3.0"
tokio = { version = "1.49.0", features = ["full"] }
